k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: default
spec:
  type: ClusterIP
  clusterIP: 10.43.68.18  # ClusterIP fijo para evitar cambios
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: postgres
