k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: new-api-httproute
  namespace: default
  labels:
    app: new-api
    managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  hostnames:
  - api.atrapo.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: default
    sectionName: https-api-atrapo
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: new-api-svc
      port: 80
      weight: 100
    matches:
    - path:
        type: PathPrefix
        value: /
